----------------------------------------------------------------------
 OmegaT 2.6.2
----------------------------------------------------------------------
   8 Enhancements
   3 Bug fixes
   4 Localisation updates
----------------------------------------------------------------------
2.6.2 vs. 2.6.1 update 2

  Implemented requests:

  - External post-processing command
  http://sourceforge.net/support/tracker.php?aid=3600209

  - Tag partial verification
  http://sourceforge.net/support/tracker.php?aid=1545637

  - In OpenXML filtter, add xml:space="preserve" to w:t elts
  http://sourceforge.net/support/tracker.php?aid=3556996

  Other enhancements:
  
  - Git team git server fingerprint will be stored in plain text file if
credentials are also stored. Acceptance of fingerprint will be remembered.

  - Markers for whitespace (space, tab, newline) and Bidi-characters in the 
View menu

  - Tag colouring for RTL languages/orientation

  - The right-click popup menu has been reorganised

  - When translating a Word (.docx) document and the target language
is RTL, a number of changes are done to the target document:
- Paragraphs, sections and tables are set to bidi
- Runs (text elements) are set to RTL

  Bug fixes:

  - PO filter: there was an error when loading PO files with a target
language with 1 plural form

  - Team projects: changes in the writable glossary were not calculated 
correctly, which resulted in duplicate entries

  - Team projects: when the writeable glossary was not inside the 
working copy, it was not possible to synchronise the project. Now, if
the writeable glossary is outside the working copy, no attempt is done 
to synchronise it.

  Localisation updates:

  - Slovenian localisation updated to 2.6.1 update 2 (UI)
  - Dutch localization updated to 2.6.1 update 2 (UI, documentation, readme)
  - Russian localization updated to 2.6.1 update 2 (UI, documentation, readme)
  - Italian localisation updated to 2.6.1 update 2 (UI)

